--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,44 @@
 table, th, td {
   border: 1px solid black;
 }
+h3.login {
+  font-size: 1em;
+  margin:auto 0;
+    /* font-weight: 500; */
+    line-height: 1.2;
+    text-align: center;
+}
 
+
+form {
+  display: block;
+  margin-top: 99px;
+}
 /* All our styles */
+#copyright {
+  text-align: center;
+  display: none;
+}
+a:hover{
+  
+  text-decoration: none;
+  background: rgba(247, 236, 153, 0.4);
+}
 
-* {
-  /* background-color: red; */
+.jumbotron{
+  width:100% ;
+  height: 100vh;
+  background-image: url("../img/hospital.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+ }
+ .well {
+  background-color: rgba(247, 236, 153, 0.4);
+  
+}
+.bg-info {
+   
+  background-color: rgba(230, 239, 240)!important;;
 }
 
 .bd-placeholder-img {
@@ -43,3 +76,4 @@ html {
 .card-deck .card {
   min-width: 220px;
 }
+
